// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots BookmarkSummary with Markdown content 1`] = `
<a
  className="sc-bdVaJa jnTnQX"
  href="https://facebook.github.io/react"
>
  <img
    className="sc-ifAKCX jrTFsk"
    src="https://facebook.github.io/react/img/logo_og.png"
  />
  <div
    className="sc-bwzfXH kulSxP"
  >
    <h2
      className="sc-htpNat eyraDA"
    >
      An Example Bookmark
    </h2>
    <span
      className="sc-bxivhb dNmQiw"
    >
      An Example Website
    </span>
    <div
      className="sc-EHOje cZVPQR"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<p>Bookmark descriptions can be provided as <strong>Markdown</strong>, and the component should <em>properly</em> format them.</p>
        <p>This includes paragraph breaks</p>
        <ul>
        <li>Lists</li>
        <li>of</li>
        <li>Items</li>
        </ul>
        <p>and</p>
        <ol>
        <li>Numbered</li>
        <li>Lists</li>
        </ol>
        <p>and <a href=\\"/\\">Links</a></p>
        ",
        }
      }
    />
  </div>
</a>
`;

exports[`Storyshots BookmarkSummary with image 1`] = `
<a
  className="sc-bdVaJa jnTnQX"
  href="https://facebook.github.io/react"
>
  <img
    className="sc-ifAKCX jrTFsk"
    src="https://facebook.github.io/react/img/logo_og.png"
  />
  <div
    className="sc-bwzfXH kulSxP"
  >
    <h2
      className="sc-htpNat eyraDA"
    >
      An Example Bookmark
    </h2>
    <span
      className="sc-bxivhb dNmQiw"
    >
      An Example Website
    </span>
    <div
      className="sc-EHOje cZVPQR"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<p>This is an example of what a bookmrk with an image might look like</p>
        ",
        }
      }
    />
  </div>
</a>
`;

exports[`Storyshots BookmarkSummary without image 1`] = `
<a
  className="sc-bdVaJa jnTnQX"
  href="https://facebook.github.io/react"
>
  <div
    className="sc-bwzfXH kulSxP"
  >
    <h2
      className="sc-htpNat eyraDA"
    >
      An Example Bookmark
    </h2>
    <span
      className="sc-bxivhb dNmQiw"
    >
      An Example Website
    </span>
    <div
      className="sc-EHOje cZVPQR"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<p>This is an example of what a bookmrk without an image might look like</p>
        ",
        }
      }
    />
  </div>
</a>
`;

exports[`Storyshots Button with the block style 1`] = `
<div>
  <a
    block={true}
    className="sc-iwsKbI gUriuB"
    href="#"
    onClick={[Function]}
  >
    Button
  </a>
</div>
`;

exports[`Storyshots Button with the default style 1`] = `
<div>
  <a
    className="sc-iwsKbI gvlzaE"
    href="#"
    onClick={[Function]}
  >
    Button
  </a>
</div>
`;

exports[`Storyshots Button with the primary style 1`] = `
<div>
  <a
    className="sc-iwsKbI kyXwYE"
    href="#"
    onClick={[Function]}
    primary={true}
  >
    Button
  </a>
</div>
`;

exports[`Storyshots Header with a child component 1`] = `
<div>
  <header
    className="sc-bZQynM dtozto"
  >
    <h1
      className="sc-gzVnrw jgVTvb"
    >
      <span
        className="sc-htoDjs jgDVio"
      >
        <span
          aria-label="logo"
          role="img"
        >
          📥
        </span>
      </span>
       Shoebox
    </h1>
    <a
      className="sc-dnqmqq dKHegk"
      href="/add"
      onClick={[Function]}
    >
      Add Bookmark
    </a>
  </header>
</div>
`;

exports[`Storyshots Header with default content 1`] = `
<div>
  <header
    className="sc-bZQynM dtozto"
  >
    <h1
      className="sc-gzVnrw jgVTvb"
    >
      <span
        className="sc-htoDjs jgDVio"
      >
        <span
          aria-label="logo"
          role="img"
        >
          📥
        </span>
      </span>
       Shoebox
    </h1>
  </header>
</div>
`;

exports[`Storyshots LinkButton with the block style 1`] = `
<div>
  <a
    className="sc-dnqmqq hNWyEf"
    href="#"
    onClick={[Function]}
    primary={true}
  >
    LinkButton
  </a>
</div>
`;

exports[`Storyshots LinkButton with the default style 1`] = `
<div>
  <a
    className="sc-dnqmqq dKHegk"
    href="#"
    onClick={[Function]}
  >
    LinkButton
  </a>
</div>
`;

exports[`Storyshots LinkButton with the primary style 1`] = `
<div>
  <a
    className="sc-dnqmqq eXzkIR"
    href="#"
    onClick={[Function]}
    primary={true}
  >
    LinkButton
  </a>
</div>
`;

exports[`Storyshots TextField with default 1`] = `
<input
  className="sc-iwsKbI cXgnuE"
  type="text"
/>
`;

exports[`Storyshots TextField with placeholder 1`] = `
<input
  className="sc-iwsKbI cXgnuE"
  placeholder="A placeholder"
  type="text"
/>
`;

exports[`Storyshots TextField with the block style 1`] = `
<input
  className="sc-iwsKbI cvINMi"
  type="text"
/>
`;

exports[`Storyshots TextField with the default style 1`] = `
<input
  className="sc-iwsKbI flfimu"
  type="text"
/>
`;

exports[`Storyshots TextField with value 1`] = `
<input
  className="sc-iwsKbI cXgnuE"
  type="text"
  value="A Value"
/>
`;
